# QAntenna

./: CMakeLists.txt
src/: CMakeLists.txt  gl.cpp  gl.h  main.cpp
src/cards/: CMakeLists.txt
src/ui/: mainwindow.cpp
