
SET(SOURCES
  gacard.cpp
  gecard.cpp
  genericcard.cpp
  gfcard.cpp
  ghcard.cpp
  gmcard.cpp
  grcard.cpp
  gscard.cpp
  gwcard.cpp
  gccard.cpp
  gxcard.cpp
  spcard.cpp
  sccard.cpp
  smcard.cpp
  cpcard.cpp
  ekcard.cpp
  encard.cpp
  excard.cpp
  frcard.cpp
  gdcard.cpp
  gncard.cpp
  khcard.cpp
  ldcard.cpp
  nenhcards.cpp
  ntcard.cpp
  nxcard.cpp
  pqcard.cpp
  ptcard.cpp
  rpcard.cpp
  tlcard.cpp
  wgcard.cpp
  xqcard.cpp
  cmcard.cpp
  cecard.cpp
)

# create static library
ADD_LIBRARY(QAntennaCards ${SOURCES})

